# jwt-auth-api-django-rest-framework

./: pyproject.toml  readme.MD
app/accounts/: urls.py
app/app/: settings.py  urls.py
